[project]
name = "datapipe"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
datapipe = "datapipe.cli:main"      # makes `datapipe records.json` a real command

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datapipe"]